--- a/cm.yaml
+++ b/cm.yaml
@@ -2,74 +2,85 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nvme-storage-configurator
-  namespace: kube-system
+  namespace: nvme-storage-config
 data:
   configure.sh: |
     #!/usr/bin/env bash
 
-    # Enable debugging
-    set -x
-
-    cp -f /scripts/configuration.sh /host-usr-local-bin/configuration.sh
-    chmod 0755 /host-usr-local-bin/configuration.sh
-    
-    cp -f /scripts/nvme-storage.service /host-etc-systemd-dir/nvme-storage.service
-    chmod 0644 /host-etc-systemd-dir/nvme-storage.service
+    for i in nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet.mount var-lib-containers.mount; do
+      cp -f "/scripts/$i" "/host-etc-systemd-dir/$i"
+      chmod 0644 "/host-etc-systemd-dir/$i"
+    done
 
     nsenter -t 1 -m -u -i -n -p -- systemctl daemon-reload
-    nsenter -t 1 -m -u -i -n -p -- systemctl enable --now nvme-storage.service
-    nsenter -t 1 -m -u -i -n -p -- sleep 10
-    nsenter -t 1 -m -u -i -n -p -- restorecon -R -v -F /home/nvme/var-lib-kubelet
-    nsenter -t 1 -m -u -i -n -p -- restorecon -R -v -F /sysroot/ostree/deploy/rhcos/var/lib/kubelet
-    nsenter -t 1 -m -u -i -n -p -- restorecon -R -v -F /home/nvme/var-lib-containers
-    nsenter -t 1 -m -u -i -n -p -- restorecon -R -v -F /sysroot/ostree/deploy/rhcos/var/lib/containers
+    nsenter -t 1 -m -u -i -n -p -- systemctl enable nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet.mount var-lib-containers.mount
+    nsenter -t 1 -m -u -i -n -p -- systemctl reboot
 
-    if [ $? -eq 0 ]; then
-        echo "The last command was successful. Exiting gracefully."
-        exit 0
-    else
-        echo "The last command failed. Exiting with an error."
-        exit 1
-    fi
-
-  configuration.sh: |
-    #!/usr/bin/env bash
-
-    set -x
-
-    export DEVICE="/dev/nvme1n1"
-    export MOUNT_POINT="/home/nvme"
-    export CONTAINER_DIR="/sysroot/ostree/deploy/rhcos/var/lib"
-    export FSTYPE="xfs"
-
-    mkdir -p ${MOUNT_POINT}
-
-    if lsblk -no FSTYPE "$DEVICE" | grep -qE '\S'; then
-        echo "File system already exists on $DEVICE."
-    else
-        echo "No file system found on $DEVICE. Creating XFS filesystem..."
-        mkfs -t "$FSTYPE" "$DEVICE"
-    fi
-
-    if ! grep -q "$DEVICE $MOUNT_POINT" /etc/fstab; then
-        echo "$DEVICE $MOUNT_POINT $FSTYPE defaults 0 0" >> /etc/fstab
-    fi
-
-    mount -a
-    mkdir -p /home/nvme/var-lib-kubelet /home/nvme/var-lib-containers
-    mount --bind /sysroot/ostree/deploy/rhcos/var/lib/kubelet /home/nvme/var-lib-kubelet
-    mount --bind /sysroot/ostree/deploy/rhcos/var/lib/containers /home/nvme/var-lib-containers
-
-    echo "Filesystem setup and mounting complete."
-
-  nvme-storage.service: |
+  nvme-storage-format.service: |
     [Unit]
-    Description=Custom Service for NVMe Storage
-    DefaultDependencies=no
-    Before=kubelet.service network-pre.target
-    After=sysinit.target 
+    Description=Format NVMe drive if needed
+    Before=var-home-nvme.mount
+    After=sysinit.target
 
     [Service]
     Type=oneshot
     RemainAfterExit=yes
-    ExecStart=/usr/local/bin/configuration.sh
+    Restart=no
+    ExecStart=/bin/bash -xc "lsblk -no FSTYPE /dev/nvme1n1 | grep -qE '\S' && echo 'Already formated' || mkfs -t xfs /dev/nvme1n1"
+
+  var-home-nvme.mount: |
+    [Unit]
+    Description=Mount NVMe drive
+    After=nvme-storage-format.service
+    BindsTo=nvme-storage-format.service
+    Before=local-fs.target
+
+    [Mount]
+    What=/dev/nvme1n1
+    Where=/home/nvme
+    Type=xfs
+    DirectoryMode=0755
+
+  nvme-storage-dirs.service: |
+    [Unit]
+    Description=Create directories on NVMe drive if needed
+    After=var-home-nvme.mount
+    BindsTo=var-home-nvme.mount
+    Before=var-lib-kubelet.mount var-lib-containers.mount
+
+    [Service]
+    Type=oneshot
+    RemainAfterExit=yes
+    Restart=no
+    ExecStart=/bin/bash -xc "mkdir -p /var/home/nvme/var-lib-kubelet /var/home/nvme/var-lib-containers"
+
+  var-lib-kubelet.mount: |
+    [Unit]
+    Description=Bind mount kubelet directory on NVMe drive
+    Before=local-fs.target kubelet-dependencies.target
+    After=nvme-storage-dirs.service
+    BindsTo=nvme-storage-dirs.service
+
+    [Mount]
+    Where=/var/lib/kubelet
+    What=/var/home/nvme/var-lib-kubelet
+    Options=bind
+    DirectoryMode=0755
+
+    [Install]
+    RequiredBy=kubelet-dependencies.target
+  var-lib-containers.mount: |
+    [Unit]
+    Description=Bind mount containers directory on NVMe drive
+    Before=local-fs.target kubelet-dependencies.target
+    After=nvme-storage-dirs.service
+    BindsTo=nvme-storage-dirs.service
+
+    [Mount]
+    Where=/var/lib/containers
+    What=/var/home/nvme/var-lib-containers
+    Options=bind
+    DirectoryMode=0755
+
+    [Install]
+    RequiredBy=kubelet-dependencies.target
