--- a/cm.yaml
+++ b/cm.yaml
@@ -12,15 +12,21 @@ data:
       exit 0
     fi
 
-    for i in nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet.mount var-lib-containers.mount; do
+    # We can not rely on device name like /dev/nvme1n1
+    DEVICE="$( ls /host-dev-dir/disk/by-id/nvme-Amazon_EC2_NVMe_Instance_Storage_* | sort | head -n1 | sed "s|^/host-dev-dir|/dev|" )"
+    echo "Going to use device $DEVICE"
+
+    # Deploy SystemD config
+    for i in nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet-pods.mount var-lib-containers.mount nvme-storage-restorecon.service; do
       cp -f "/scripts/$i" "/host-etc-systemd-dir/$i"
       chmod 0644 "/host-etc-systemd-dir/$i"
+      sed -i "s|DEVICE|$DEVICE|g" "/host-etc-systemd-dir/$i"
     done
 
     nsenter -t 1 -m -u -i -n -p -- systemctl daemon-reload
-    ###nsenter -t 1 -m -u -i -n -p -- systemctl enable nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet.mount var-lib-containers.mount
+    nsenter -t 1 -m -u -i -n -p -- systemctl enable nvme-storage-format.service var-home-nvme.mount nvme-storage-dirs.service var-lib-kubelet-pods.mount var-lib-containers.mount nvme-storage-restorecon.service
     touch /host-etc-systemd-dir/nvme-init-done
-    ###nsenter -t 1 -m -u -i -n -p -- systemctl reboot
+    nsenter -t 1 -m -u -i -n -p -- systemctl reboot
 
   nvme-storage-format.service: |
     [Unit]
@@ -32,7 +38,7 @@ data:
     Type=oneshot
     RemainAfterExit=yes
     Restart=no
-    ExecStart=/bin/bash -xc "lsblk -no FSTYPE /dev/nvme0n1 | grep -q ^. && echo 'Already formated' || mkfs -t xfs /dev/nvme1n1"
+    ExecStart=/bin/bash -xc "lsblk -no FSTYPE DEVICE | grep -q ^. && echo 'Already formated' || mkfs -t xfs DEVICE"
 
   var-home-nvme.mount: |
     [Unit]
@@ -42,7 +48,7 @@ data:
     Before=local-fs.target
 
     [Mount]
-    What=/dev/nvme1n1
+    What=DEVICE
     Where=/var/home/nvme
     Type=xfs
     DirectoryMode=0755
@@ -52,33 +58,34 @@ data:
     Description=Create directories on NVMe drive if needed
     After=var-home-nvme.mount
     BindsTo=var-home-nvme.mount
-    Before=var-lib-kubelet.mount var-lib-containers.mount
+    Before=var-lib-kubelet-pods.mount var-lib-containers.mount
 
     [Service]
     Type=oneshot
     RemainAfterExit=yes
     Restart=no
-    ExecStart=/bin/bash -xc "mkdir -p /var/home/nvme/var-lib-kubelet /var/home/nvme/var-lib-containers"
+    ExecStart=/bin/bash -xc "mkdir -p /var/home/nvme/var-lib-kubelet-pods /var/home/nvme/var-lib-containers"
 
-  var-lib-kubelet.mount: |
+  var-lib-kubelet-pods.mount: |
     [Unit]
-    Description=Bind mount kubelet directory on NVMe drive
-    Before=local-fs.target kubelet-dependencies.target
+    Description=Bind mount kubelet/pods directory on NVMe drive
+    Before=nvme-storage-restorecon.service
     After=nvme-storage-dirs.service
     BindsTo=nvme-storage-dirs.service
 
     [Mount]
-    Where=/var/lib/kubelet
-    What=/var/home/nvme/var-lib-kubelet
+    Where=/var/lib/kubelet/pods
+    What=/var/home/nvme/var-lib-kubelet-pods
     Options=bind
     DirectoryMode=0755
 
     [Install]
     RequiredBy=kubelet-dependencies.target
+
   var-lib-containers.mount: |
     [Unit]
     Description=Bind mount containers directory on NVMe drive
-    Before=local-fs.target kubelet-dependencies.target
+    Before=nvme-storage-restorecon.service
     After=nvme-storage-dirs.service
     BindsTo=nvme-storage-dirs.service
 
@@ -87,6 +94,22 @@ data:
     What=/var/home/nvme/var-lib-containers
     Options=bind
     DirectoryMode=0755
+
+    [Install]
+    RequiredBy=kubelet-dependencies.target
+
+  nvme-storage-restorecon.service: |
+    [Unit]
+    Description=Restorecon on bind mounted dirs
+    Before=local-fs.target kubelet-dependencies.target
+    After=var-lib-kubelet-pods.mount var-lib-containers.mount
+    BindsTo=var-home-nvme.mount
+
+    [Service]
+    Type=oneshot
+    RemainAfterExit=yes
+    Restart=no
+    ExecStart=/bin/bash -xc "restorecon -R -v -F /var/lib/containers /var/lib/kubelet/pods"
 
     [Install]
     RequiredBy=kubelet-dependencies.target
