--- a/pod-test.yaml
+++ b/pod-test.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 metadata:
   name: nvme-test
-  namespace: cpt
+  namespace: nvme-storage-config
 spec:
   nodeSelector:
     node-role.kubernetes.io/konflux-tenants: ""
