--- a/ds.yaml
+++ b/ds.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nvme-storage-configurator
-  namespace: nvme-storage-config
   labels:
     app: nvme-storage-configurator
+  namespace: nvme-storage-config
 spec:
   selector:
     matchLabels:
@@ -29,6 +29,8 @@ spec:
               name: script-config
             - mountPath: /host-etc-systemd-dir
               name: etc-systemd-dir
+            - mountPath: /host-usr-local-bin
+              name: usr-local-bin
             - mountPath: /host-dev-dir
               name: dev-dir
       containers:
@@ -38,6 +40,9 @@ spec:
         - name: etc-systemd-dir
           hostPath:
             path: /etc/systemd/system
+        - name: usr-local-bin
+          hostPath:
+            path: /usr/local/bin
         - name: dev-dir
           hostPath:
             path: /dev
